--- a/.htaccess
+++ b/.htaccess
@@ -4,9 +4,8 @@ RewriteCond %{REQUEST_URI} !^/lib/
 RewriteRule ^(.*)/(.*)/(.*).png$ tileproxy.php?z=$1&x=$2&y=$3 [NC,L]
 
 <IfModule mod_deflate.c>
-	AddOutputFilterByType DEFLATE text/html text/plain text/css application/json
+	AddOutputFilterByType DEFLATE text/html text/plain text/css
 	AddOutputFilterByType DEFLATE text/javascript application/javascript application/x-javascript
-	AddOutputFilterByType DEFLATE text/xml application/xml text/x-component
 	<FilesMatch "\.(css|js)$" >
 		SetOutputFilter DEFLATE
 	</FilesMatch>
