--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 RewriteEngine on
 RewriteBase /
 RewriteCond %{REQUEST_URI} !^/lib/
-RewriteRule ^(.*)/(.*)/(.*).png$ tileproxy.php?z=$1&x=$2&y=$3 [NC,L]
+RewriteRule ^(.*)/(.*)/(.*).png$ request.php?z=$1&x=$2&y=$3 [NC,L]
 
 <IfModule mod_deflate.c>
 	AddOutputFilterByType DEFLATE text/html text/plain text/css
